--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
     <title>Google</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
+        <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
     <form id="googleSearchForm">
-        <input id="textSeach" name="textSearch" type="text">
+        <input id="textSearch" name="textSearch" type="text">
+        <br>
         <button id="googleSearch">Google Search</button>
         <button id="feelingLucky">I'm feeling Lucky</button>
     </form>
@@ -24,5 +27,19 @@
     <div id="terms">
         <p>© 2019 - <a href="#">Privacy</a> - <a href="#">Terms</a></p>
     </div>
+
+    <nav id="navbar">
+            <a class="navlink" href="#">Search</a>
+            <a class="navlink" href="#">Images</a>
+            <a class="navlink" href="#">Maps</a>
+            <a class="navlink" href="#">Play</a>
+            <a class="navlink" href="#">Youtube</a>
+            <a class="navlink" href="#">News</a>
+            <a class="navlink" href="#">Gmail</a>
+            <a class="navlink" href="#">Drive</a>
+            <a class="navlink" href="#">More ⮟</a>
+            <a class="navlink2" href="#">Sign in</a>
+            <a class="navlink2" href="#">Setting</a>
+    </nav>
 </body>
 </html>
