--- a/index.html
+++ b/index.html
@@ -6,27 +6,24 @@
 </head>
 
 <body>
-        <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
-    <form id="googleSearchForm">
+
+<div id="googleSearchForm">
+    <form>
+            <div id="logo"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo"></div>
+        <div id="bar">
         <input id="textSearch" name="textSearch" type="text">
-        <br>
+        <div id="moreSearch">
+            <a href="#">Advanced search</a>
+            <a href="#">Language tools</a>
+            </div></div>
+        <div id="buttons">
         <button id="googleSearch">Google Search</button>
         <button id="feelingLucky">I'm feeling Lucky</button>
+        </div>
     </form>
-    <div id="moreSearch">
-    <a href="#">Advanced search</a>
-    <a href="#">Language tools</a>
-    </div>
+</div>
     
-    <div id="moreGoogle">
-        <a href="#">Advertising Programs</a>
-        <a href="#">Business Solutions</a>
-        <a href="#">About Google</a>
-    </div>
-
-    <div id="terms">
-        <p>© 2019 - <a href="#">Privacy</a> - <a href="#">Terms</a></p>
-    </div>
+   
 
     <nav id="navbar">
             <a class="navlink" href="#">Search</a>
@@ -42,4 +39,15 @@
             <a class="navlink2" href="#">Setting</a>
     </nav>
 </body>
+<footer>
+    <div id="moreGoogle">
+        <a class="moreclass" href="#">Advertising Programs</a>
+        <a class="moreclass" href="#">Business Solutions</a>
+        <a class="moreclass" href="#">About Google</a>
+    </div>
+<br>
+    <div id="terms">
+        <p>© 2019 - <a href="#">Privacy</a> - <a href="#">Terms</a></p>
+    </div>
+</footer>
 </html>
